
	* Fix netsplits generated when connection to a network is lost.

	* Fix crash in on_transport_log when no error is set. (#219)

    * Fix crash in log_custom when the network is disconnected. (#212)

  FEATURES

    * Provide Python bindings for the main library code. Mainly used for 
	  unit testing at the moment, but will also become available to 
	  ctrlproxy users at some point.

Ctrlproxy 3.0.8 2008-12-06

  FEATURES

    * Only warn about inconsistency in server channel modes at start-up, 
      rather than every time a mode is being used.

    * Allow two connections to the same network. (#151)

    * Support GSSAPI authentication for SOCKS.

    * Support for multiple users using a system-wide daemon
      (ctrlproxyd) that can be started at system start-up. 
      (#25)
    
    * Network configuration can now also be specified in 
      ~/.ctrlproxy/config.

    * Allow setting default-nick, default-username and 
      default-fullname in [global] section.

    * Linestack is not disabled completely after a single 
      write fails.

  BUG FIXES
   
    * Support 901 response codes.

    * Don't write to nickserv file either if autosave=false.

    * Avoid unknown command warning when sending PASS.

    * Recognize UHNAMES and ESILENCE 005 parameters.

    * Properly track nick names when doing fallback.

    * Disable autosave by default.

    * Properly spoof netsplit when ctrlproxy loses the connection to the
      server.

    * Fail gracefully if getpeername() doesn't work.

    * Don't crash when no argument is specified to STOPLISTENER. (#201)

    * Fix segfault on FreeBSD because it doesn't like freeaddrinfo(NULL). 
      (#202)

    * Support 290 (CAPAB) response codes.

    * Fix client-limit for auto-away. (Alex Stansfield)

    * Send channel limits in mode. (#200)

    * Don't crash on empty messages from client. (#206)

  INTERNALS

    * Use generic storage for MODEs.

Ctrlproxy 3.0.7 2008-06-14

  FEATURES
